finally fixing the alignment issues with the first page of the scrolling carousel, as a bonus it looks the same in both firefox and chrome. Now mobile version works fine

--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@
   margin: 0;
   padding: 0;
   font: inherit;
-  border: 1px solid;
-  border-color: red;
+  /* border: 1px solid;
+  border-color: red; */
 }
 
 body {
@@ -134,6 +134,7 @@ main {
 
 /* carousel box */
 .carousel_container {
+  display: flex;
   margin: 0;
   margin-left: var(--left-margin);
   padding: 0px;
@@ -147,10 +148,11 @@ ul.carousel {
   height: 100%;
   padding: 0;
   margin: 0;
-  /* display: block; */
+  display: flex;
+  flex-direction: column;
   /* gap: 1.5rem; */
   overflow-y: auto;
-  /* overflow-y: hidden; */
+  overflow-x: hidden;
   /* scroll-snap-type: y mandatory; */
   scroll-behavior: smooth;
   scrollbar-width: none; /* remove scrollbar for Firefox */
@@ -161,8 +163,10 @@ ul.carousel::-webkit-scrollbar {
   display: none;
 }
 
+/* flex so the div inside can be put at ther right place*/
 ul.carousel li {
   list-style-type: none;
+  display: flex;
 }
 
 .carousel_page {
@@ -170,6 +174,7 @@ ul.carousel li {
   width: var(--scroll-picture-width);
   height: var(--scroll-picture-width);
   list-style-type: none;
+  display: flex; /* alignment does not work otherwise */
   flex: 0 0 auto;
   background-color: var(--color-background-900);
   z-index: 1;
@@ -177,7 +182,7 @@ ul.carousel li {
 /* This should go after .carousel_page because it's modifying it */
 .first_page {
   height: 180px;
-  align-content: end;
+  justify-content: center;
   background-color: transparent;
 }
 
@@ -189,20 +194,26 @@ ul.carousel img {
   transition: 0.3s;
   z-index: 5;
 }
-
+/* classes for the caption inside the pictures */
 .page_caption {
-  margin-bottom: 2rem;
   padding: 1rem;
   position: relative;
   font-size: var(--font-size-highlight);
   z-index: 4;
   pointer-events: none;
+  align-self: self-start;
+}
+.first_caption {
+  align-self: self-end;
 }
 
 .two_columns {
   display: flex;
 }
 
+.picture_column {
+  margin-top: 2rem;
+}
 .picture_column img {
   width: 300px;
 }
@@ -290,19 +301,23 @@ ul.carousel img {
     scroll-behavior: auto;
   }
 }
+
 /* hover effect  */
 @media (hover: hover) {
   /* adding :focus, not sure it's working */
-  ul.carousel img:hover, img:focus {
+  ul.carousel img:hover,
+  img:focus {
     opacity: 0.5;
     z-index: 3;
   }
 }
 /* adapting for mobile */
-@media (max-width:1000px) {
+@media (max-width: 1000px) {
   main {
     display: block;
+    /* flex-direction: column; */
     overflow-y: auto;
+    overflow-x: hidden;
   }
   .carousel_container {
     margin-left: 0;
@@ -314,10 +329,14 @@ ul.carousel img {
   ul.carousel {
     overflow-x: auto;
     overflow-y: hidden;
-    display: flex;
+    flex-direction: row;
   }
   .first_page {
     width: 180px;
+    align-self: center;
+  }
+  .first_caption {
+    align-self: center;
   }
   .content {
     width: 100dvw;
